K8s_yaml/k8s_yaml/canary_deployment/canary-ingress.yaml
# canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
  name: canary-ingress
  namespace: canary
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: myapp-v2-svc
      port:
        number: 8080
