K8s_yaml/k8s_yaml/canary_deployment/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: canary
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: myapp-v1-svc
      port:
        number: 8080
